--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="description" content="Магазин игровых аккаунтов">
+	<title>Damp Store</title>
 </head>
 <body>
-	<h1>ALALALALALALALALLLLLLLLLLLL</h1>
+	
 </body>
 </html>
