--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<link rel="shortcut icon" href="images/icon.ico">
 	<meta charset="UTF-8">
 	<meta name="description" content="Магазин игровых аккаунтов">
-	<title>Damp Store</title>
+	<meta name="keywords" content="ключевые слова
 </head>
 <body>
 	
