--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<title>Damp Store</title>
 	<link rel="shortcut icon" href="images/icon.ico">
 	<meta charset="UTF-8">
 	<meta name="description" content="Магазин игровых аккаунтов">
