--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<title>Damp Store</title>
-	<link rel="shortcut icon" href="images/icon.ico">
-	<meta charset="UTF-8">
-	<meta name="description" content="Магазин игровых аккаунтов">
-	<meta name="keywords" content="ключевые слова
-</head>
-<body>
-	
-</body>
+	<head>
+		<title>Damp Store</title>
+		<link rel="shortcut icon" href="images/icon.ico">
+		<meta charset="UTF-8">
+		<meta name="description" content="Магазин игровых аккаунтов">
+		<meta name="keywords" content="ключевые слова">
+	</head>
+	<body>
+		
+	</body>	
 </html>
