--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="shortcut icon" href="images/icon.ico">
 		<meta charset="UTF-8">
 		<meta name="description" content="Магазин игровых аккаунтов">
-		<meta name="keywords" content="ключевые слова">
+		<meta name="keywords" content="Damp Store, Store Damp">
 	</head>
 	<body>
 		
