--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="Магазин игровых аккаунтов">
 		<meta name="keywords" content="Damp Store, Store Damp">
+		<meta name="yandex-verification" content="9b0b7b716de7ab09" />
 	</head>
 	<body>
 		
